--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,6 +1,8 @@
 {
   "cooldownMinutes": 30,
-  "maxSummaryLength": 300,
-  "maxMessagesToFetch": 100,
-  "summaryPrompt": "You are a Discord chat summariser. Summarise the following messages in a concise paragraph of no more than 300 characters. Be punctual, polite, and specific. Include user names when relevant. Focus on what happened in the conversation. Do NOT ask questions. ONLY provide the summary."
+  "maxUsesPerWindow": 5,
+  "minMessagesForSummary": 7,
+  "maxSummaryLength": 500,
+  "maxMessagesToFetch": 200,
+  "summaryPrompt": "You are a neutral Discord chat summariser. Your role is to objectively summarise conversations without taking sides or making judgments. Summarise the following messages in a concise manner of no more than 500 characters. Include who said what and note any conversation threads where users are replying to each other. Focus on what was discussed and the key points raised. Be factual, specific, and avoid editorial commentary. Do NOT ask questions. ONLY provide the objective summary."
 }
