Add semantic search with embeddings, neutral British English prompts
- Add embedding service using OpenRouter API (text-embedding-3-small)
- Generate 15 related search terms for /topic and /explain
- Update prompts to be neutral, concise (<600 chars), factual British English
- Tell LLM what user searched for vs what was found
- No more casual slang, no @pings (use DisplayName (@username) format)
- Add EMBEDDING_API_KEY and EMBEDDING_MODEL to .env.example

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,13 @@ LLM_PROVIDER=google
 #   - gpt-4-turbo
 #   - gpt-3.5-turbo
 LLM_MODEL=gemini-2.0-flash-exp
+
+# Embedding API Configuration (for semantic search in /topic and /explain)
+# Uses OpenRouter API - get key from https://openrouter.ai/keys
+# If not set, falls back to LLM_API_KEY (works if using OpenRouter for LLM)
+EMBEDDING_API_KEY=your_openrouter_api_key_here
+
+# Embedding model to use (OpenRouter model format)
+# Default: openai/text-embedding-3-small (fast, good quality, low cost)
+# Alternatives: openai/text-embedding-3-large, cohere/embed-english-v3.0
+EMBEDDING_MODEL=openai/text-embedding-3-small
