feat: add OpenRouter fallback for LLM rate limits

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,14 @@ LLM_PROVIDER=google
 #   - gpt-3.5-turbo
 LLM_MODEL=gemini-2.0-flash-exp
 
+# Fallback LLM Configuration (Optional)
+# Used when the primary provider fails (e.g., rate limits)
+# Example: Use OpenRouter when Gemini is down/rate-limited
+LLM_FALLBACK_PROVIDER=openrouter
+LLM_FALLBACK_API_KEY=your_openrouter_api_key_here
+LLM_FALLBACK_MODEL=liquid/lfm-40b
+# LLM_FALLBACK_BASE_URL=https://openrouter.ai/api/v1
+
 # Embedding API Configuration (for semantic search in /topic and /explain)
 # Uses OpenRouter API - get key from https://openrouter.ai/keys
 # If not set, falls back to LLM_API_KEY (works if using OpenRouter for LLM)
