feat: add bot-owner-only /viewall command with search and summary capabilities
- Add /viewall command allowing bot owner to view messages from any server
- Support three actions: view, search (by keyword), and summarize channel
- Configurable message limit (1-1000) for all actions
- Add BOT_OWNER_ID to .env.example and botOwnerId to config
- Implement server dropdown selection menu
- Add authorization checks at command and interaction levels
- All responses are ephemeral for privacy
- Remove macOS metadata files (._*.js)
- Backward compatible: all new options are optional with sensible defaults

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # Get this from https://discord.com/developers/applications
 DISCORD_BOT_TOKEN=your_discord_bot_token_here
 
+# Bot Owner Discord User ID (for owner-only commands like /viewall)
+# Right-click your username in Discord (with Developer Mode enabled) and select "Copy ID"
+BOT_OWNER_ID=your_discord_user_id_here
+
 # LLM API Configuration
 # For Google Gemini: https://aistudio.google.com/app/apikey
 LLM_API_KEY=your_google_api_key_here
